<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_riwayat"
            android:title="@string/menu_riwayat" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_star"
            android:title="@string/menu_favorite" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info"
            android:title="@string/menu_info" />
    </group>
</menu>